Store mounted archive source paths
Add mountedArchivePaths map to record the host archive Path for each mounted FileSystem and use it when navigating up out of non-local roots (e.g. ZIP/JAR). Replace the previous URI string-parsing logic with a direct lookup of the mount source and handle missing parents with clearer logging. Also avoid re-entering the same path by checking parent.equals(currentPath) before navigation and save the archivePath when registering mounts. This makes upward navigation from archive roots more robust and removes brittle URI parsing.